@@ -228,6 +228,8 @@ Bug Fixes:
  -- Wizhelp SUSPECT should describe that all commands from SUSPECT-set
     players are logged as controlled by the 'log' configuration option
     (Issue 199).
+ -- @moniker without any argument gave 'I don't see that here.' followed by
+    'Permission denied.'.  (Issue 40).
 
 
 Performance Enhancements:
